removido views individuais, concluído update/delete course, ajustado nome script.js

--- a/views/index.html
+++ b/views/index.html
@@ -62,5 +62,5 @@
             <button id="confirmUpdate" btnUpdate>ATUALIZAR CURSO SELECIONADO</button>
         </form>
     </td></table>
-    <script src="./../scripts/addCurso.js"></script>
+    <script src="./../scripts/script.js"></script>
 </body>
